--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -8,23 +8,22 @@ $white: #fff;
   width: 100%;
 
   .wrapper {
+    align-items: center;
     display: flex;
+    height: 100%;
+    justify-content: space-between;
+    margin: 0 30px;
   }
 }
 
 .navbartoggle {
-  left: 20px;
-  position: absolute;
-  top: 28px;
-
-  label {
-    display: block;
-  }
-
   .menutoggle {
     cursor: pointer;
     height: 25px;
     position: fixed;
+
+    position: absolute;
+    top: 30px;
     width: 30px;
     z-index: 3;
   }
@@ -49,5 +48,30 @@ $white: #fff;
     content: '';
     left: -1px;
     top: 22px;
+  }
+}
+
+.authcontainer {
+  align-items: center;
+  //width: 200px;
+  display: flex;
+  justify-content: space-between;
+
+  span {
+    user-select: none;
+  }
+}
+
+.authbtn {
+  cursor: pointer;
+  font-family: sans-serif;
+  font-size: 18px;
+  font-weight: 100;
+  margin: 0 10px;
+  transition: 0.3s;
+
+  &:hover {
+    opacity: 0.3;
+    transition: 0.3s;
   }
 }
