--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -15,3 +15,64 @@ $white: #fff;
     margin: 0 30px;
   }
 }
+
+
+.auth-container {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+
+  span {
+    user-select: none;
+  }
+}
+
+.auth-btn {
+  cursor: pointer;
+  font-family: sans-serif;
+  font-size: 18px;
+  font-weight: 100;
+  margin: 0 10px;
+  transition: 0.3s;
+
+  &:hover {
+    opacity: 0.3;
+    transition: 0.3s;
+  }
+}
+
+
+.navbar-toggle {
+  .menu-toggle {
+    cursor: pointer;
+    height: 25px;
+    position: fixed;
+
+    position: absolute;
+    top: 30px;
+    width: 30px;
+    z-index: 3;
+  }
+
+  .menu-toggle > span,
+  .menu-toggle > span::before,
+  .menu-toggle > span::after {
+    border: 1px solid #000;
+    display: block;
+    position: absolute;
+    transition-duration: 0.25s;
+    width: 100%;
+  }
+
+  .menu-toggle > span::before {
+    content: '';
+    left: -1px;
+    top: 11px;
+  }
+
+  .menu-toggle > span::after {
+    content: '';
+    left: -1px;
+    top: 22px;
+  }
+}
