--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,13 +1,13 @@
 @import '../../styles-global/index.module';
 
 .Header {
-  background-color: $white;
+  background-color: $white-color;
   box-shadow: 0 1px 6px rgba(13, 16, 61, 0.6);
   height: 80px;
   margin-bottom: 30px;
   width: 100%;
 
-  &__Wrapper {
+  &__wrapper {
     align-items: center;
     display: flex;
     height: 100%;
@@ -17,7 +17,7 @@
 }
 
 
-.AuthContainer {
+.Header__authContainer {
   align-items: center;
   display: flex;
   justify-content: space-between;
@@ -26,7 +26,7 @@
     user-select: none;
   }
 
-  &__Button {
+  &__button {
     cursor: pointer;
     font-family: sans-serif;
     font-size: 18px;
@@ -35,14 +35,14 @@
     transition: 0.3s;
   }
 
-  &__Button:hover {
+  &__button:hover {
     opacity: 0.3;
     transition: 0.3s;
   }
 }
 
-.NavbarContainer {
-  &__Button {
+.Header__navbarContainer {
+  &__button {
     cursor: pointer;
     height: 25px;
 
@@ -52,9 +52,9 @@
     z-index: 3;
   }
 
-  &__Button > span,
-  &__Button > span::before,
-  &__Button > span::after {
+  &__button_dash,
+  &__button_dash::before,
+  &__button_dash::after {
     border: 1px solid #000;
     display: block;
     position: absolute;
@@ -62,13 +62,13 @@
     width: 100%;
   }
 
-  &__Button > span::before {
+  &__button_dash::before {
     content: '';
     left: -1px;
     top: 11px;
   }
 
-  &__Button > span::after {
+  &__button_dash::after {
     content: '';
     left: -1px;
     top: 22px;
