--- a/src/components/WordCard/WordCard.module.scss
+++ b/src/components/WordCard/WordCard.module.scss
@@ -14,14 +14,13 @@
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 
     height: 200px;
-    width: 40%;
+    width: 100%;
   }
 
   &__header {
-    align-items: center;
-    display: flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
     padding-top: 20px;
+    width: 45%;
   }
 
   &__body {
