--- a/src/components/AppSectionCard/AppSectionCard.module.scss
+++ b/src/components/AppSectionCard/AppSectionCard.module.scss
@@ -1,13 +1,8 @@
 @import '../../styles-global/index.module';
 
 .AppSectionCard {
-  border: 1px solid #0e34e0;
-  border-radius: 5px;
-  height: 150px;
-  padding: 6px;
+  @extend %main-page-card;
 
-  transition: 0.3s;
-  user-select: none;
   width: 150px;
 
   &__text {
@@ -20,10 +15,5 @@
     height: 100%;
     text-decoration: none;
     width: 100%;
-  }
-
-  &:hover {
-    @extend %card-shadow;
-    border-color: #8d0c0c;
   }
 }
