--- a/src/styles-global/placeholders.module.scss
+++ b/src/styles-global/placeholders.module.scss
@@ -6,7 +6,6 @@
 
 %main-page-card {
   @extend %card-shadow;
-  // border: 1px solid #0e34e0;
   border-radius: 5px;
   height: 150px;
   padding: 6px;
@@ -14,6 +13,6 @@
   user-select: none;
 
   &:hover {
-    background-color: $cards-hover-bg;
+    background-color: $color-card-hover;
   }
 }
