--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -1,25 +1,32 @@
 .NavBar {
   background-color: #fff;
   box-shadow: 1px 0 6px rgba(0, 0, 0, 0.2);
-  display: block;
   height: 100vh;
   list-style: none;
   position: fixed;
   top: 0;
   transition-duration: 0.25s;
-  visibility: hidden;
   width: 350px;
   z-index: 2;
+
+  &-active {
+    display: block;
+  }
+
+  &-disable {
+    display: none;
+  }
 }
 
-.NavBar__LinkContainer {
+.NavBar__linkContainer {
   display: flex;
   flex-direction: column;
   font-size: 22px;
-  margin-left: 40px;
-  margin-top: 50px;
+  margin-left: 30px;
+  margin-top: 100px;
+  user-select: none;
 
-  &__Link {
+  &-link {
     color: rgba(0, 0, 0, 0.8);
     cursor: pointer;
     font-family: sans-serif;
@@ -29,7 +36,7 @@
     transition: 0.3s;
   }
 
-  &__Link:hover {
+  &-link:hover {
     opacity: 0.3;
     transition: 0.3s;
   }
