--- a/src/pages/SettingsPage/SettingsPage.module.scss
+++ b/src/pages/SettingsPage/SettingsPage.module.scss
@@ -4,16 +4,15 @@
   margin: 0 30px;
   width: 100%;
 
-}
+  &__btn {
+    align-self: center;
+    width: 300px;
+  }
 
-.Settings__btn {
-  align-self: center;
-  width: 300px;
-}
-
-.settings__title {
-    width:100%;
-  font-size: 18px;
-  font-weight: 700;
-  text-align: center;
+  &__title {
+    font-size: 18px;
+    font-weight: 700;
+    text-align: center;
+    width: 100%;
+  }
 }
