RSL-04: create differents view of elements on login/or not

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -18,10 +18,14 @@
 
 
 .Header__auth {
-  &-container {
+  &-containerLogout {
     align-items: center;
     display: flex;
     justify-content: space-between;
+  }
+
+  &-containerLogin {
+    margin: auto;
   }
 
   &-button {
