RSL-07-Styling-Aut-Card: styling card

--- a/src/pages/SignInPage/SignInPage.module.scss
+++ b/src/pages/SignInPage/SignInPage.module.scss
@@ -1,11 +1,16 @@
+
 .Form {
   margin: 0 auto;
   width: 200px;
 
-  &__label {
-    display: flex;
-    flex-direction: column;
+  &__link {
+    cursor: pointer;
   }
+
+  &__button {
+    color: #000;
+  }
+
 }
 
 
