RSL-04: fix remarks

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -18,13 +18,13 @@
 
 
 .Header__auth {
-  &-containerLogout {
+  &-container-logout {
     align-items: center;
     display: flex;
     justify-content: space-between;
   }
 
-  &-containerLogin {
+  &-container-login {
     margin: auto;
   }
 
