--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -9,16 +9,36 @@
   width: 350px;
   z-index: 2;
 
-  &-active {
+  &--active {
     display: block;
   }
 
-  &-disable {
+  &--disable {
     display: none;
   }
 }
 
-.NavBar__linkContainer {
+.NavBar__link {
+  color: rgba(0, 0, 0, 0.8);
+  cursor: pointer;
+  font-family: sans-serif;
+  font-weight: 100;
+  margin-bottom: 30px;
+  text-decoration: none;
+  transition: 0.3s;
+
+  &:hover {
+    opacity: 0.3;
+    transition: 0.3s;
+  }
+
+  &--active {
+    cursor: default;
+    opacity: 0.3;
+  }
+}
+
+.NavBar__link-сontainer {
   display: flex;
   flex-direction: column;
   font-size: 22px;
@@ -26,23 +46,5 @@
   margin-top: 100px;
   user-select: none;
 
-  &-link {
-    color: rgba(0, 0, 0, 0.8);
-    cursor: pointer;
-    font-family: sans-serif;
-    font-weight: 100;
-    margin-bottom: 30px;
-    text-decoration: none;
-    transition: 0.3s;
-  }
 
-  &-link:hover {
-    opacity: 0.3;
-    transition: 0.3s;
-  }
-
-  &-link-active {
-    cursor: default;
-    opacity: 0.3;
-  }
 }
