--- a/src/components/WordCard/WordCard.module.scss
+++ b/src/components/WordCard/WordCard.module.scss
@@ -5,8 +5,9 @@
   margin: 0 auto;
 
   &__wrapper {
-    margin: 0 auto;
+    margin: 0 auto 10px;
     max-width: 700px;
+    position: relative;
   }
 
   &__image {
