--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,7 +4,7 @@
   background-color: $white-color;
   box-shadow: 0 1px 6px rgba(13, 16, 61, 0.6);
   height: 80px;
-  margin-bottom: 30px;
+  //margin-bottom: 30px;
   width: 100%;
 
   &__wrapper {
