--- a/src/components/ProgressBar/ProgressBar.module.scss
+++ b/src/components/ProgressBar/ProgressBar.module.scss
@@ -1,26 +1,8 @@
 .WordCount {
+  color: rgb(0, 35, 133);
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  position: absolute;
-  top: -30px;
-  transition: 0.5s;
-  width: 100%;
-
-  &__count {
-    display: flex;
-    font-size: 25px;
-    justify-content: center;
-    width: 100%;
-  }
-
-  &__icon {
-    transform: rotate(-90deg);
-  }
-
-  &:hover {
-    transform: translateY(35px);
-  }
-
- 
+  font-weight: 600;
+  justify-content: flex-end;
+  margin-right: 5px;
+  margin-top: 5px;
 }
