RSL-28: add checker entered word

--- a/src/components/WordInput/WordInput.module.scss
+++ b/src/components/WordInput/WordInput.module.scss
@@ -1,5 +1,4 @@
 .WordInput {
-  background-color: #c29090;
-  margin-bottom: 20px;
-  width: 100px;
+  background-color: transparent;
+  z-index: 2;
 }
