--- a/src/components/ModalWindow/ModalWindow.module.scss
+++ b/src/components/ModalWindow/ModalWindow.module.scss
@@ -2,7 +2,19 @@
   color: #090;
 }
 
-
 .background2 {
   color: #020;
+}
+
+.DialogWrapper {
+  min-height: 100px;
+  min-width: 500px;
+}
+
+.DialogTittle {
+  color: #100;
+  font-size: 100px;
+  margin: 100px;
+  padding: 0;
+  text-align: center;
 }
