--- a/src/components/WordInput/WordInput.module.scss
+++ b/src/components/WordInput/WordInput.module.scss
@@ -1,4 +1,11 @@
+@import '../../styles-global/index.module';
+
 .WordInput {
   background-color: transparent;
   z-index: 2;
+
+  &__text {
+    color: $input-text-color;
+    font-weight: 700;
+  }
 }
