--- a/src/styles-global/colors.module.scss
+++ b/src/styles-global/colors.module.scss
@@ -5,15 +5,6 @@ $color-card-hover: #adcbff70;
 $black-color: #000;
 
 $green-color: #3fd18f;
-$red-color: #cf2a01;
-$orange-color: #db7439;
+$red-color: #f30;
+$orange-color: #fd8642;
 $input-text-color: #456d52;
-
-:export {
-  /* stylelint-disable property-no-unknown */
-  fewErrorsColor: $orange-color;
-  inputTextColor: $input-text-color;
-  manyErrorsColor: $red-color;
-  noErrorsColor: $green-color;
-  /* stylelint-enable */
-}
