RSL-30: layout sprint game

--- a/src/styles-global/colors.module.scss
+++ b/src/styles-global/colors.module.scss
@@ -15,3 +15,4 @@ $learning-bad-color: #f80;
 $learning-normal-color: #ddd900;
 $learning-good-color: #0f2;
 $learning-excellent-color: #8c00ff;
+$success-main: #4caf50;
