RSL-30: layout sprint game

--- a/src/styles-global/colors.module.scss
+++ b/src/styles-global/colors.module.scss
@@ -4,6 +4,7 @@ $white-color-transparent: #ffffffc2;
 $hidden-word-bg: #7fbdf7;
 $color-card-hover: #adcbff70;
 $black-color: #000;
+$success-main: #4caf50;
 
 $green-color: #3fd18f;
 $red-color: #f30;
