--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,12 +1,14 @@
 @import '../../styles-global/index.module';
 
 .Footer {
+  bottom: 0;
+  position: absolute;
+  width: 100%;
+
   &__container {
     background-color: $white-color;
     box-shadow: 0 -1px 6px rgba(13, 16, 61, 0.6);
-    height: 100px;
-    margin-bottom: 30px;
-    width: 100%;
+    height: 70px;
   }
 
   &__linkRs {
