--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -11,14 +11,14 @@
     height: 70px;
   }
 
-  &__linkRs {
+  &__link-rs {
     align-items: center;
     display: flex;
     margin-left: 20px;
     text-decoration: none;
   }
 
-  &__headerRs {
+  &__header-rs {
     color: $black-color;
     margin-left: 10px;
   }
