--- a/src/components/Student/Student.module.scss
+++ b/src/components/Student/Student.module.scss
@@ -20,7 +20,7 @@
     text-align: center;
   }
 
-  &__wrapper-iconLink {
+  &__wrapper-icon-link {
     height: max-content;
     margin: 0 auto;
     width: max-content;
