RSL-13: add controls state

--- a/src/components/SentenceWithWord/SentenceWithWord.module.scss
+++ b/src/components/SentenceWithWord/SentenceWithWord.module.scss
@@ -13,4 +13,10 @@
     display: inline-block;
     font-weight: 700;
   }
+
+  &--hide {
+    opacity: 0;
+    transition: opacity 1s;
+    z-index: -5;
+  }
 }
