RSL-13: improve components structure

--- a/src/components/SentenceWithWord/SentenceWithWord.module.scss
+++ b/src/components/SentenceWithWord/SentenceWithWord.module.scss
@@ -14,9 +14,9 @@
     font-weight: 700;
   }
 
-  &--hide {
-    opacity: 0;
-    transition: opacity 1s;
-    z-index: -5;
+  &__text {
+    @extend %transition-all;
+
+    text-align: center;
   }
 }
