--- a/src/components/WordCard/WordCard.module.scss
+++ b/src/components/WordCard/WordCard.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles-global/index.module';
+
 .WordCard {
   margin: 0 auto;
 
@@ -32,11 +34,6 @@
     text-align: center;
   }
 
-  &__text {
-    text-align: center;
-    transition: all 1s;
-  }
-
   &__container {
     display: flex;
     justify-content: center;
@@ -45,11 +42,5 @@
 
   &__input {
     position: relative;
-  }
-
-  &--hide {
-    opacity: 0;
-    transition: opacity 1s;
-    z-index: -5;
   }
 }
