can't press footer

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,8 +1,7 @@
 @import '../../styles-global/index.module';
 
 .Footer {
-  bottom: 0;
-  position: absolute;
+  align-self: flex-end;
   width: 100%;
 
   &__container {
