--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,1 +1,11 @@
+.App__wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+}
+
+.PageRoutes {
+  align-self: center;
+}
 
