RSL-22: finished dixing bugs

--- a/src/components/Student/Student.module.scss
+++ b/src/components/Student/Student.module.scss
@@ -5,6 +5,10 @@
   margin: 30px;
   width: min-content;
 
+  &__wrapper {
+    width: min-content;
+  }
+
   &__img-git {
     background-size: cover;
   }
