--- a/src/pages/AboutUsPage/AboutUsPage.module.scss
+++ b/src/pages/AboutUsPage/AboutUsPage.module.scss
@@ -1,5 +1,13 @@
+.Students__container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 30px;
+}
+
 .Description {
-  margin: 40px auto;
+  margin: 0 30px;
   max-width: 1300px;
   text-align: justify;
 }
