--- a/src/components/Dialog/Dialog.module.scss
+++ b/src/components/Dialog/Dialog.module.scss
@@ -4,16 +4,20 @@
     min-width: 500px;
   }
 
-  &__title {
-    align-items: center;
-    color: #000;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    text-align: center;
+  &__button-ok {
+    padding: 20px 50px;
   }
+}
 
-  &__title::before {
+.ModalWindow__title {
+  align-items: center;
+  color: #000;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  text-align: center;
+
+  &::before {
     background: url('../../img/info.png');
     background-position: center;
     background-size: cover;
@@ -23,16 +27,16 @@
     margin-right: 15px;
     width: 50px;
   }
+}
 
-  &__title-error {
-    align-items: center;
-    color: #8b0000;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-  }
+.ModalWindow__title-error {
+  align-items: center;
+  color: #8b0000;
+  display: flex;
+  justify-content: center;
+  text-align: center;
 
-  &__title-error::before {
+  &::before {
     background: url('../../img/error.png');
     background-position: center;
     background-size: cover;
@@ -41,9 +45,5 @@
     height: 50px;
     margin-right: 15px;
     width: 50px;
-  }
-
-  &__button-ok {
-    padding: 20px 50px;
   }
 }
