RSL-27: fix code

--- a/src/components/Dialog/Dialog.module.scss
+++ b/src/components/Dialog/Dialog.module.scss
@@ -4,7 +4,11 @@
     min-width: 500px;
   }
 
-  &__button-ok {
+  &__container-close {
+    margin: 0 auto;
+  }
+
+  &__close {
     padding: 20px 50px;
   }
 }
