--- a/src/components/Dialog/Dialog.module.scss
+++ b/src/components/Dialog/Dialog.module.scss
@@ -1,9 +1,4 @@
 .ModalWindow {
-  &__content {
-    min-height: 100px;
-    min-width: 500px;
-  }
-
   &__container-close {
     margin: 0 auto;
   }
@@ -15,10 +10,9 @@
 
 .ModalWindow__title {
   align-items: center;
-  color: #000;
   display: flex;
   justify-content: center;
-  text-align: center;
+  position: relative;
   text-align: center;
 
   &::before {
@@ -26,18 +20,21 @@
     background-position: center;
     background-size: cover;
     content: '';
-    display: block;
     height: 50px;
-    margin-right: 15px;
-    width: 50px;
+    height: 30px;
+    left: 20px;
+    margin-right: auto;
+    position: absolute;
+    top: calc(50% - 15px);
+    width: 30px;
   }
 }
 
 .ModalWindow__title-error {
   align-items: center;
-  color: #8b0000;
   display: flex;
   justify-content: center;
+  position: relative;
   text-align: center;
 
   &::before {
@@ -45,9 +42,12 @@
     background-position: center;
     background-size: cover;
     content: '';
-    display: block;
     height: 50px;
+    height: 30px;
+    left: 20px;
     margin-right: 15px;
-    width: 50px;
+    position: absolute;
+    top: calc(50% - 15px);
+    width: 30px;
   }
 }
