--- a/src/components/GameStartScreen/GameStartScreen.module.scss
+++ b/src/components/GameStartScreen/GameStartScreen.module.scss
@@ -3,12 +3,12 @@
   background-size: 100% 100%;
   height: 70vh;
   width: 100%;
-        
+
   &__wrapper {
     display: flex;
     margin: 0 30px;
   }
-    
+
   &__title {
     font-size: 32px;
   }
@@ -23,6 +23,10 @@
     flex-direction: column;
     flex-grow: 1;
     justify-content: center;
+  }
+
+  &__button {
+    text-decoration: none;
   }
 
 }
