--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -23,23 +23,20 @@
   cursor: pointer;
   font-family: sans-serif;
   font-weight: 100;
-  margin-bottom: 30px;
   text-decoration: none;
-  transition: 0.3s;
-
-  &:hover {
-    opacity: 0.3;
-    transition: 0.3s;
-  }
-
-  &--active {
-    //background-color: #fff;
-    //opacity: 0.3;
-  }
 }
 
 .NavBar__link-container {
   font-size: 22px;
   user-select: none;
   width: 300px;
+}
+
+.title {
+  display: flex;
+  font-family: sans-serif;
+  font-weight: 100;
+  justify-content: center;
+  margin: 30px 0 10px;
+  text-decoration: none;
 }
