--- a/src/styles-global/colors.module.scss
+++ b/src/styles-global/colors.module.scss
@@ -12,6 +12,6 @@ $input-text-color: #456d52;
 
 $learning-fail-color: #ff0606;
 $learning-bad-color: #f80;
-$learning-normal-color: #fe0;
+$learning-normal-color: #ddd900;
 $learning-good-color: #0f2;
 $learning-excellent-color: #8c00ff;
