--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -8,6 +8,7 @@
     background-color: $white-color;
     box-shadow: 0 -1px 6px rgba(13, 16, 61, 0.6);
     height: 70px;
+    position: relative;
   }
 
   &__link-rs {
