--- a/src/styles-global/colors.module.scss
+++ b/src/styles-global/colors.module.scss
@@ -15,3 +15,24 @@ $learning-bad-color: #f80;
 $learning-normal-color: #ddd900;
 $learning-good-color: #0f2;
 $learning-excellent-color: #8c00ff;
+
+$learning-fail-bg-color: #ff000048;
+$learning-bad-bg-color: #ffc37e3f;
+$learning-normal-bg-color: #ddd9003f;
+$learning-good-bg-color: #00ff2234;
+$learning-excellent-bg-color: #8c00ff3b;
+
+:export {
+  learningBadBGColor: $learning-bad-bg-color;
+  learningBadColor: $learning-bad-color;
+  learningExcellentBGColor: $learning-excellent-bg-color;
+  learningExcellentColor: $learning-excellent-color;
+  learningFailBGColor: $learning-fail-bg-color;
+  /* stylelint-disable property-no-unknown */
+  learningFailColor: $learning-fail-color;
+  learningGoodBGColor: $learning-good-bg-color;
+  learningGoodColor: $learning-good-color;
+  learningNormalBGColor: $learning-normal-bg-color;
+  learningNormalColor: $learning-normal-color;
+  /* stylelint-enable */
+}
