RSL-37: fix style

--- a/src/components/WordCard/WordCard.module.scss
+++ b/src/components/WordCard/WordCard.module.scss
@@ -1,12 +1,13 @@
 @import '../../styles-global/index.module';
 
 .WordCard {
-  margin: 0 auto;
+  margin-top: 30px;
 
   &__wrapper {
-    margin: 0 auto 10px;
+    margin: 10px auto;
     max-width: 700px;
     min-height: 450px;
+    padding-top: 8px;
     position: relative;
   }
 
