RSL-25: stash my code for checkout branch

--- a/src/components/UserStateindIcator/UserStateIndicator.module.scss
+++ b/src/components/UserStateindIcator/UserStateIndicator.module.scss
@@ -10,7 +10,7 @@
 }
 
 .abc {
-  font-size: 40px;
+  // font-size: 40px;
   // color: red;
   // background-color: red;
 }
@@ -38,7 +38,7 @@
 }
 
 
-.BeforeText {
+.TittleProgress {
   align-items: center;
   display: flex;
   margin-right: 20px;
