--- a/src/pages/SprintPage/SprintPage.module.scss
+++ b/src/pages/SprintPage/SprintPage.module.scss
@@ -3,6 +3,7 @@
 }
 
 .Card {
+  box-sizing: border-box;
   height: 380px;
   margin-bottom: 50px;
   min-width: 250px;
@@ -75,6 +76,7 @@
 .false-color {
   animation: false 0.5s ease-in-out;
   outline: 5px solid rgba(255, 51, 0, 100);
+
 }
 
 .true-color {
