--- a/src/pages/SprintPage/SprintPage.module.scss
+++ b/src/pages/SprintPage/SprintPage.module.scss
@@ -4,12 +4,11 @@
 
 .Card {
   box-sizing: border-box;
-  height: 380px;
+  height: 65vh;
   margin-bottom: 50px;
   min-width: 250px;
   padding: 0 20px;
   width: 40%;
-
 
   &__header,
   &__main {
