--- a/src/components/SavannaQuestion/SavannaQuestion.module.scss
+++ b/src/components/SavannaQuestion/SavannaQuestion.module.scss
@@ -1,11 +1,14 @@
 .question {
   font-size: 24px;
-  height: 200px;
+  height: 80vh;
   position: relative;
+
 }
   
 .question__wrapper {
-  animation: moveBot 5s linear infinite;
+  animation: moveBot 5.1s linear infinite;
+  display: flex;
+  justify-content: center;
   position: relative;
 }
   
@@ -17,11 +20,11 @@
 
   50% {
     opacity: 0.5;
-    top: 50%;
+    top: 25%;
   }
 
   100% {
     opacity: 0;
-    top: 100%;
+    top: 50%;
   }
 }
