RSL-34: fix word queue, add simple res tab

--- a/src/pages/SavannaPage/SavannaPage.module.scss
+++ b/src/pages/SavannaPage/SavannaPage.module.scss
@@ -5,3 +5,10 @@
   position: relative;
   width: 100%;
 }
+
+.startBtn {
+  left: -50%;
+  position: absolute;
+  top: 100px;
+  transform: translateY(-50%);
+}
