--- a/src/components/Student/Student.module.scss
+++ b/src/components/Student/Student.module.scss
@@ -5,7 +5,14 @@
   margin: 30px;
   width: min-content;
 
-  &__wrapper {
+  &__wrapper-mentor {
+    display: flex;
+    justify-content: center;
+    margin: 50px auto;
+    width: 100%;  
+  }
+
+  &__wrapper-developer {
     width: min-content;
   }
 
@@ -30,6 +37,57 @@
     margin: 0 auto;
     width: max-content;
   }
+}
+
+.CardStudent {
+  &__header-mentor,
+  &__header-team-leader,
+  &__header-developer {
+    align-items: center;
+    display: flex;
+    height: 40px;
+    justify-content: center;
+    position: relative;
+  }
+  
+  &__header-mentor::before,
+  &__header-team-leader::before,
+  &__header-developer::before {
+    content: '';
+    height: 30px;
+    left: 5px;
+    position: absolute;
+    top: calc(50% - 15px);
+  } 
+
+  &__header-mentor::before {
+    background: url('../../img/mentor.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    content: '';
+    width: 60px;
+  }
+
+  &__header-team-leader::before {
+    background: url('../../img/team-lider.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    content: '';
+    width: 30px;
+  }
+
+  &__header-developer::before {
+    background: url('../../img/developer.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    content: '';
+    width: 30px;
+  }
+
+
 }
 
 @media (max-width: 500px) {
