--- a/src/pages/AboutUsPage/AboutUsPage.module.scss
+++ b/src/pages/AboutUsPage/AboutUsPage.module.scss
@@ -1,10 +1,4 @@
-.Students__container {
+.AboutUsPage {
   margin: 0 auto;
   max-width: 1000px;
-}
-
-@media (max-width: 500px) {
-  .Description {
-    max-width: 300px;
-  }
 }
