--- a/src/pages/SettingsPage/SettingsPage.module.scss
+++ b/src/pages/SettingsPage/SettingsPage.module.scss
@@ -1,17 +1,25 @@
 .Settings {
   display: flex;
   flex-direction: column;
-  margin: 0 30px;
+  margin: 0 30px 30px;
+
+  &__wrapper {
+    margin: 0 auto;
+  }
 
   &__btn {
-    align-self: center;
-    width: 300px;
+    flex-wrap: wrap;
   }
 
   &__title {
     font-size: 18px;
     font-weight: 700;
+    margin-bottom: 20px;
     text-align: center;
     width: 100%;
+  }
+
+  &__hint {
+    max-width: 300px;
   }
 }
