--- a/src/components/UserStateindIcator/UserStateIndicator.module.scss
+++ b/src/components/UserStateindIcator/UserStateIndicator.module.scss
@@ -1,6 +1,6 @@
-.nowValue {
+.lowerLimit {
   line-height: 2;
-  padding-right: 10px;
+  padding-right: 12px;
   text-align: left;
 }
 
@@ -9,9 +9,9 @@
   text-align: center;
 }
 
-.maxValue {
+.upperLimit {
   line-height: 2;
-  padding-left: 10px;
+  padding-left: 12px;
   text-align: right;
 }
 
