RSL-34: refactor code

--- a/src/pages/SavannaPage/SavannaPage.module.scss
+++ b/src/pages/SavannaPage/SavannaPage.module.scss
@@ -1,9 +1,18 @@
 .Savanna {
+  background-image: url('../../img/savannaBG.jpg');
   display: flex;
   flex-direction: column;
+  height: 80vh;
   justify-content: center;
   position: relative;
   width: 100%;
+
+  &__lives {
+    left: 40px;
+    position: absolute;
+    top: 40px;
+  }
+  
 }
 
 .startBtn {
