--- a/src/components/GameStartScreen/GameStartScreen.module.scss
+++ b/src/components/GameStartScreen/GameStartScreen.module.scss
@@ -6,6 +6,7 @@
 
   &__wrapper {
     display: flex;
+    flex-direction: column;
     margin: 0 30px;
   }
 
@@ -23,6 +24,7 @@
     flex-direction: column;
     flex-grow: 1;
     justify-content: center;
+    margin: 0 20px;
   }
 
   &__button {
