RLS-34: add styles, impruve statistic

--- a/src/components/SavannaAnswers/SavannaAnswers.module.scss
+++ b/src/components/SavannaAnswers/SavannaAnswers.module.scss
@@ -1,6 +1,10 @@
 .answer__wrapper {
   left: 50%;
   position: absolute;
-  top: 50%;
+  top: 100px;
   transform: translate(-50%, -50%);
+
+  @media (max-width: 700px) {
+    top: 150px;
+  }
 }
