--- a/src/pages/SavannaPage/SavannaPage.module.scss
+++ b/src/pages/SavannaPage/SavannaPage.module.scss
@@ -1,11 +1,30 @@
+@import '../../styles-global/index.module';
+
 .Savanna {
-  background-image: url('../../img/savannaBG.jpg');
+  background-image: url('../../img/SavannaBG3.png');
+  background-position: left bottom;
+  background-size: cover;
   display: flex;
   flex-direction: column;
-  height: 80vh;
+  height: 70vh;
   justify-content: center;
   position: relative;
   width: 100%;
+
+  &__wrapper {
+    position: relative;
+  }
+
+  &__results {
+    background-color: $white-color-transparent;
+    border: 2px solid $learning-bad-color;
+    left: 50%;
+    max-width: 300px;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+
+  }
 
   &__lives {
     left: 40px;
@@ -13,6 +32,15 @@
     top: 40px;
   }
   
+  &__answers_wrong {
+    color: $learning-fail-color;
+    font-size: 16px;
+  }
+
+  &__answers_right {
+    color: $learning-good-color;
+    font-size: 16px;
+  }
 }
 
 .startBtn {
