--- a/src/components/SavannaQuestion/SavannaQuestion.module.scss
+++ b/src/components/SavannaQuestion/SavannaQuestion.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles-global/index.module';
+
 .question {
   font-size: 24px;
   height: 80vh;
@@ -6,9 +8,13 @@
 }
   
 .question__wrapper {
+  color: $learning-good-color;
   display: flex;
+  font-size: 36px;
   justify-content: center;
   position: relative;
+  top: 20%;
+  
 }
   
 .question__wrapper_animated {
@@ -21,28 +27,33 @@
 
 @keyframes moveBot {
   0% {
+    color: $learning-good-color;
     opacity: 1;
-    top: 0;
+    top: 20%;
   }
 
   50% {
+    color: $learning-normal-color;
     opacity: 0.5;
-    top: 25%;
+    top: 40%;
   }
 
   100% {
+    color: $learning-fail-color;
     opacity: 0.3;
-    top: 50%;
+    top: 60%;
   }
 }
 
 @keyframes moveBotFaster {
   0% {
+    color: $learning-bad-color;
     opacity: 0.5;
-    top: 50%;
+    top: 60%;
   }
 
   100% {
+    color: $learning-bad-color;
     opacity: 0;
     top: 100%;
   }
