--- a/src/components/WordCard/WordCard.module.scss
+++ b/src/components/WordCard/WordCard.module.scss
@@ -16,13 +16,7 @@
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 
     height: 200px;
-    width: 100%;
-  }
-
-  &__header {
-    flex-wrap: wrap;
-    padding-top: 20px;
-    width: 45%;
+    min-width: 320px;
   }
 
   &__body {
@@ -43,5 +37,17 @@
 
   &__input {
     position: relative;
+  }
+
+  &__translate-btn {
+    @media (max-width: 360px) {
+      right: 30px !important;
+    }
+  }
+
+  &__mute-btn {
+    @media (max-width: 360px) {
+      right: 5px !important;
+    }
   }
 }
