--- a/src/components/WordCard/WordCard.module.scss
+++ b/src/components/WordCard/WordCard.module.scss
@@ -14,8 +14,14 @@
   &__image {
     border-radius: 5px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-
     height: 200px;
+  }
+
+  &__image--hide {
+    max-width: 0;
+  }
+
+  &__image--show {
     min-width: 320px;
   }
 
