RSL-34: fix green color

--- a/src/pages/SavannaPage/SavannaPage.module.scss
+++ b/src/pages/SavannaPage/SavannaPage.module.scss
@@ -42,7 +42,7 @@
   }
 
   &__answers_right {
-    color: $learning-good-bg-color;
+    color: rgba(63, 204, 35, 0.973);
     font-size: 18px;
   }
 
