RSL-52: fix mobile style image

--- a/src/components/ModalImage/ModalImage.module.scss
+++ b/src/components/ModalImage/ModalImage.module.scss
@@ -1,9 +1,10 @@
 .ModalImage {
   &__image {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     border-radius: 5px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-
-    height: 200px;
     width: 100%;
   }
 }
